[package]
name = "wolf-rust"
version = "0.1.0"
authors = ["Ben Konz <benkonz@protonmail.com>"]
edition = "2018"

[dependencies]
png = "0.16.1"

[dependencies.sdl2]
version = "0.33.0"
features = ["bundled", "static-link"]

[profile.dev]
opt-level = 2
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1
panic = "abort"